--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<div class="panel-heading">
 							<h3 class="panel-title text-center">Wins</h3>
 						</div>
-						<div class="panel-body text-center">
+						<div class="panel-body text-center" id="winCount">
 							<p>0</p>
 						</div>
 					</div> <!-- panel primary div -->
@@ -91,7 +91,7 @@
 						<div class="panel-heading">
 							<h3 class="panel-title text-center">Losses</h3>
 						</div>
-						<div class="panel-body text-center">
+						<div class="panel-body text-center" id="lossCount">
 							<p>0</p>
 						</div>
 					</div> <!-- panel primary div -->
